# robotarm

./: CMakeLists.txt  CoordinateGen.py  main.py
script/: CoordinateGen.py  controller.py
src/: controller.py  getcoords.cpp  webcam.cal
